# solano-ruletka

./: .gitignore  Anchor.toml  Anchor.toml.bak  BUG_DISCRIMINATOR.md  README.md  check_discriminator.js  package-lock.json  package.json  render.yaml  tsconfig.json
.cargo/: config.toml
frontend/: .env.example  decode_bet.js  decode_bet_v2.js  next.config.js  package-lock.json  package.json  test_idl.js  tsconfig.json
frontend/.next/: BUILD_ID  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: next-server.js.nft.json
frontend/.next/server/: _error.js  middleware-build-manifest.js  middleware-react-loadable-manifest.js  pages-manifest.json  webpack-api-runtime.js
frontend/.next/server/chunks/: 808.js  966.js
frontend/components/: Header.tsx  RouletteBoard.tsx  RouletteBoardClean.tsx  RouletteBoardFixed.tsx  SiteFooter.tsx  SiteHeader.tsx
frontend/idl/: roulette_table.json
frontend/lib/: anchor.ts
frontend/pages/: _app.tsx  admin.tsx  agb.tsx  datenschutz.tsx  get-tokens.tsx  impressum.tsx  index.tsx
frontend/pages/api/: social-links.ts
frontend/scripts/: createMints.js  fetchOnchainIdl.js  inspectGlobalState.js  inspectTablesAndGlobals.js
frontend/styles/: globals.css
frontend/types/: tweetnacl.d.ts
programs/roulette_table/: Cargo.lock.bak  Cargo.toml  Cargo.toml.bak  Cargo.toml.orao.bak
programs/roulette_table/src/: lib.rs
tests/: roulette_table.ts
(+170 files in other folders)
